--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,8 @@ serde_json     = "1.0"
 surrealdb      = { version = "1.5", optional = true }
 mysql_async    = { version = "0.33", optional = true }
 
+# --- OSCAR EMR MariaDB subscription --------------------------------------
+mysql_binlog = "0.4"
+
 [features]
 default = ["surrealdb"]
