--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,11 @@ serde_json     = "1.0"
 surrealdb      = { version = "1.5", optional = true }
 mysql_async    = { version = "0.33", optional = true }
 
+# --- Other dependencies ---------------------------------------------------
+anyhow         = "1.0"              # error handling
+axum           = { version = "0.8.4", features = ["json"] }  # HTTP client
+base64ct       = "<1.8.0"
+
 # --- OSCAR EMR MariaDB subscription --------------------------------------
 mysql_binlog = "0.4"
 
