--- a/.devcontainer/Cargo-copy.toml
+++ b/.devcontainer/Cargo-copy.toml
@@ -36,6 +36,7 @@ axum           = { version = "0.8.4", features = ["json", "macros"] }  # HTTP cl
 base64ct       = "<1.8.0"
 toml           = "0.8"
 chrono         = { version = "0.4.41", features = ["serde"] }  # date/time handling
+axum-server   = "0.7.2"              # HTTP server for health checks
 
 # --- OSCAR EMR MariaDB subscription --------------------------------------
 mysql-binlog-connector-rust = "0.3.2"
